--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,13 @@
     <artifactId>QuesterSimulator</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-
+	<dependencies>
+		<dependency>
+			<groupId>net.thequester</groupId>
+			<artifactId>QuesterWebSupport</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+	</dependencies>
 
     
 </project>
