--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,11 @@
 			<artifactId>QuesterWebSupport</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>net.thequester</groupId>
+			<artifactId>QuesterLib</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
     
